tests/NormalTests/paczka1/small_fuzzy/53075807.err
Error in line 12: FD2KvY0U A297 62,v
Error in line 10: vyngJX S268 15,2
Error in line 11: 0kL A576 62,2
